# agent-demo

./: .env.example  .gitignore  README.md  pyproject.toml
src/consent_adk_demo/: __init__.py  agent.py  eval_set_1.evalset.json  main.py
src/consent_adk_demo/agents/: audit_agent.py  consent_action_agent.py  sequential_agent.py  user_intent_validator.py
src/consent_adk_demo/config/: settings.py
src/consent_adk_demo/observability/: __init__.py  llm_io.py
src/consent_adk_demo/tools/: consent_tools.py
tests/eval/: test_consent_agent_eval.evalset.json  test_consent_agent_eval.py
tests/unit/: test_consent_tools.py
