[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consent-adk-demo"
version = "0.1.0"
description = "Google ADK sequential agent demo for consent management"
requires-python = ">=3.12"
dependencies = [
    "google-adk[extensions]>=1.33",
    "python-dotenv>=1",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-asyncio>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/consent_adk_demo"]
